--- a/entanglement.ipynb
+++ b/entanglement.ipynb
@@ -49,7 +49,7 @@
     "# Return a drawing of the circuit using MatPlotLib (\"mpl\").\n",
     "# This is the last line of the cell, so the drawing appears in the cell output.\n",
     "# Remove the \"mpl\" argument to get a text drawing.\n",
-    "qc.draw(\"mpl\")\n",
+    "# qc.draw(\"mpl\")\n",
     "optimized_qc.draw(\"mpl\")"
    ]
   },
